--- a/M4/css/style.css
+++ b/M4/css/style.css
@@ -1,22 +1,35 @@
-body {
+body { 
+    display: flex;
+    flex-direction: column ;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #dbdbdb;
+    
 }
 
-header, nav {
-    margin: 0;
-    background-color: black;
-    color: white;
+nav {
+    border-radius: 20px;
+    margin: 0px;
+    background-color: white;
+    color: #800000;
+    border: solid rgb(199, 199, 199) 2px;;
 }
 
 .menu {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
+}
+
+.menu h1 {
+    margin-left: 30px;
 }
 
 #logo {
-    margin-top: 30px;
+    margin-top: 40px;
     margin-bottom: 30px;
+    margin-left: 30px;
+    height: 150px;
 }
+
 
 #titulo {
     margin-top: 80px;
@@ -25,12 +38,13 @@ header, nav {
 .nav {
     display: flex;
     justify-content: space-around;
+    padding-top: 10px;
 }
 
 .secciones {
     color: black;
     text-decoration: none;
-    background: grey;
+    background: rgb(219, 219, 219);
     padding: 4px 20px;
     margin-bottom: 10px;
     border-radius: 30px;
@@ -48,8 +62,11 @@ header, nav {
 footer {
     display: flex;
     justify-content: space-between;
-    background: grey;
-    color: black;
+    background: white;
+    color: rgb(53, 53, 53);
+    border-radius: 20px;
+    border: solid rgb(199, 199, 199) 2px;
+    margin-top: 20px;
 }
 
 #copyright {
@@ -62,10 +79,87 @@ footer {
 #iconos {
     filter: brightness(1.1);
     mix-blend-mode: multiply;
-    width: 49px;
-    margin-right: 10px;
-    margin-bottom: 5px;
-    margin-top: 5px;
+    height: 35px;
+    padding-top: 7%;
+    padding-right: 20px;
     
 }
 
+.cuerpo_principal {
+    display:flex;
+    align-content: flex-start;
+}
+.cuerpo_principal .parrafo{
+    display:flex;
+    align-content: flex-start;
+}
+
+.parrafo{
+    color: rgb(0, 0, 0);
+    background-color: white;
+    text-align: justify;
+    padding: 60px;
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 30px;
+    border: solid rgb(199, 199, 199) 2px;
+}
+.segundo_parrafo{
+    display: flex;
+    align-content: flex-start;
+    padding-right: 50px;
+    margin-right: 10px;
+    margin-bottom: 60px;
+}
+
+.primer_parrafo{
+    margin-right: 100px;
+}
+.primero {
+    display: flex;
+    align-items: flex-start;
+    font-style: italic;
+    width: 1000px;
+}
+
+.columna {
+    color: rgb(0, 0, 0);
+    background-color: white;
+    text-align: left    ;
+    padding: 30px;
+    border-radius: 20px;
+    width: auto;
+    margin-top: 20px;
+    border: solid rgb(199, 199, 199) 2px;
+}
+
+
+.foto_personal {
+    height: auto;
+    margin-left: auto;
+}
+
+.parrafo img{
+    height: 400px;
+    border-radius: 10%;
+}
+
+.segundo_parrafo img{
+    margin-left: 20px;
+    margin-right: 60px;
+	height:300px;
+    border-radius: 100px;
+}
+
+.parrafo p:first-of-type{
+    text-indent: 3%;
+    text-align: justify;
+    
+}
+
+/*videos*/
+
+.parrafo h2::first-letter{
+    font-size: 2rem;
+}
